3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

server/c_party.c: fix another obscure party crash bug
Brendan Lally 2005-10-12

server/c_party.c: fix a couple of loops that could crash under certain circumstances
Brendan Lally 2005-10-11

common/object.c: use canonical_key instead of key, else == always fails.
server/apply.c: drop "on_use_yield" item if required when applying potion, food or poison.
 This lets players get empty bottles/vials/... when using potions.
Ryo 2005-10-09

Added GetMarkedItem to Python, cleaned compilation warnings.
 plugin/plugin_python.c
 plugin/include/plugin_python.h

Moved gps code to Python script, thus cleaning relevant code from server core.
 common/item.c: remove item description.
 include/define.h: remove gps define.
 server/apply.c: remove gps function.
Ryo 2005-10-08

Prevent objects from losing inventory when thrown.
include/libproto.h, common/object.c: Add new parameter "free_inventory" to
   free_object(). Is set, free inventory as well instead of dropping it on the
   ground.
common/object.c: In get_split_ob() prevent inventory of splitted object to be
   dropped.
Andreas Kirschbaum 2005-10-07

common/object.c: Use object_create_clone in get_split_ob; Fixes things inside
   of objects disappearing when throwing.
Alex Schultz 2005-10-7

Make damage done by area spells not depend on monster size.
include/sproto.h, server/attack.c: Add additional parameter "full_hit" to
   hit_map() and hit_player(). If set, do full damage, if unset scale down by
   monster size.
server/{apply.c, attack.c, disease.c, monster.c, player.c, rune.c,
spell_attack.c, spell_effect.c, spell_util.c, time.c}: Change callers to set